fix: change contrast text color

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -51,7 +51,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: #1565c0;
+    background-color: #1976d2;
     border-radius: 6px;
   }
 }
